examples/errors/multiple_errors.aaa
fn
    foo
begin
    5
end

fn
    bar
begin
    5
end
